# legal_agent

./: .gitignore  README.md  app.py  index.html  pyproject.toml  requirements.txt  style.css
src/legal_agent/: brand_legal_crew.py  crew.py  legal_crew.py  main.py
src/legal_agent/config/: agents.yaml  tasks.yaml
src/legal_agent/tools/: google_calendar_tool.py  send_email.py  test_calendar.py  test_email.py  web_search.py
static/: style.css
templates/: index.html
