[project]
name = "legal_agent"
version = "0.1.0"
description = "legal_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.0"
]

[project.scripts]
legal_agent = "legal_agent.main:run"
run_crew = "legal_agent.main:run"
train = "legal_agent.main:train"
replay = "legal_agent.main:replay"
test = "legal_agent.main:test"
run_with_trigger = "legal_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
